# fed-inspirasom

./: .gitignore  CHANGELOG  CHANGELOG.md  README.md  angular.json  jest.config.ts  package-lock.json  package.json  setup-jest.ts  tsconfig.json  tsconfig.spec.json
.fleet/: settings.json
.github/workflows/: checkVersion.yml  main.yml
.run/: Generate Entities.run.xml  Generate TS bindings.run.xml  Migration Up.run.xml  Run Dev Server.run.xml  Run Tauri App.run.xml  tauri dev (wayland).run.xml  tauri dev.run.xml
gitHooks/: README.md  commit-msg  pre-commit  pre-push
scripts/: check-version.js  update-version.js
src/: index.html  main.ts  styles.scss
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/arduino-comm/: Cargo.toml
src-tauri/arduino-comm/src/: arduino_communicator.rs  errors.rs  lib.rs  midi_connection.rs  midi_notes.rs  midi_wrapper.rs  note.rs  serial_communicator.rs
src-tauri/midi-reader/: Cargo.toml
src-tauri/midi-reader/src/: errors.rs  game_connection.rs  lib.rs  midi_connection.rs  midi_file.rs  midi_length_calc.rs  player_wrapper.rs  reader_service.rs  test_callback.rs  timer.rs
src-tauri/persistence/: .env  Cargo.toml
src-tauri/persistence/entity/src/entities/: mod.rs  music.rs  prelude.rs  score.rs
src-tauri/persistence/migration/: Cargo.toml  data.json
src-tauri/persistence/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240908_003611_load_musics.rs  m20241003_012943_extra_data.rs  m20241004_041209_total_misses.rs  music_json_loader.rs
src-tauri/persistence/src/: storage.rs
src-tauri/resources/musics/: 09092024_defaults.json  data.json
src-tauri/src/: main.rs
src-tauri/src/app_states/: current_music_score_state.rs  database_state.rs  midi_device_state.rs  mod.rs  monitoring_state.rs  score_database.rs  store_state.rs
src-tauri/src/commands/: midi_connection_commands.rs  midi_reader_commands.rs  midi_reader_service.rs  mod.rs  score_commands.rs  score_service.rs  service_error.rs
src-tauri/src/commands/commands_utils/: database_queries.rs  midi_connection_utils.rs  midi_file_utils.rs  mod.rs  monitor.rs
src-tauri/src/commands/payloads/: midi_payload.rs  mod.rs  music.rs  on_note_data.rs  score.rs  service_error.rs
src-tauri/src/constants/: dirs.rs  errors.rs  events_name.rs  limits.rs  mod.rs  store_keys.rs
src-tauri/src/services/: database.rs  midi_connection.rs  midi_reader.rs  midi_reader_service.rs  mod.rs  score_service.rs  service_error.rs
src-tauri/src/services/data_structs/: midi_payload.rs  midi_signal.rs  mod.rs  music.rs
src-tauri/storage/: Cargo.toml
src-tauri/storage/src/: storage.rs
src-tauri/user/: .env  Cargo.toml
src-tauri/user/src/: endpoints.rs  lib.rs
src-tauri/utils/src/: lib.rs  mutable_arc.rs  mutable_arc_weak.rs
src/app/: app.component.html  app.component.scss  app.component.ts  app.routes.ts
src/app/core/model/: EndgameData.model.ts  GraphData.model.ts  MidiMusic.ts  MidiMusicList.ts  MidiSignal.ts  MidiState.ts  MusicSheet.model.ts  Note.ts  NotePrecision.model.ts  NotePressPrecision.ts  NoteStatus.model.ts  NoteWrapper.ts  OnNoteMessage.ts  OnNotePressedMessage.ts  OnScoreUpdateMessage.ts  Score.ts  ScoreOrder.ts  ServiceError.ts  partituraNotas.model.ts
src/app/core/screens/components/overlay/: overlay.component.html  overlay.component.scss  overlay.component.ts
src/app/core/screens/components/sidebar/: sidebar.component.html  sidebar.component.scss  sidebar.component.ts
src/app/core/screens/gamificada/: gamificada.component.html  gamificada.component.scss  gamificada.component.spec.ts  gamificada.component.ts
src/app/core/screens/gamificada/game/: game.component.ts
src/app/core/screens/gamificada/game/events/: EventNames.enum.ts
src/app/core/screens/gamificada/game/scenes/: BootUtils.scene.ts  Endgame.scene.ts  Game.scene.ts  Menu.scene.ts  Pause.scene.ts
src/app/core/screens/login/: login.component.html  login.component.scss  login.component.ts
src/app/core/screens/menu-dashboards/: menu-dashboards.component.html  menu-dashboards.component.scss  menu-dashboards.component.spec.ts  menu-dashboards.component.ts
src/app/core/screens/menu-dashboards/components/chart-visualization/: chart-visualization.component.html  chart-visualization.component.spec.ts  chart-visualization.component.ts
src/app/core/screens/menu-dashboards/components/graph-visualization/: graph-visualization.component.html  graph-visualization.component.scss  graph-visualization.component.spec.ts  graph-visualization.component.ts
src/app/core/screens/menu-dashboards/components/list-visualization/: list-visualization.component.scss  list-visualization.component.spec.ts  list-visualization.component.ts
src/app/core/screens/menu-gamificada/: menu-gamificada.component.html  menu-gamificada.component.scss  menu-gamificada.component.spec.ts  menu-gamificada.component.ts
src/app/core/screens/menu-gamificado/: menu-gamificado.component.html  menu-gamificado.component.spec.ts  menu-gamificado.component.ts
src/app/core/screens/partitura/: partitura.component.html  partitura.component.scss  partitura.component.ts
src/app/core/screens/user-profile/: user-profile.component.html  user-profile.component.scss  user-profile.component.ts
src/app/core/services/dataService/: data.service.ts
src/app/core/services/db/: db.ts
src/app/core/services/music-service/: music.service.ts
src/app/core/services/musicService/: music.service.ts
src/app/core/services/pdfService/: pdf.service.ts
src/app/core/services/rust/: rust-functions.enum.ts  rust.service.spec.ts  rust.service.ts
src/app/core/services/rust/dataSource/: rust-dataSource.service.spec.ts  rust-dataSource.service.ts
src/app/core/services/sidebar-service/: sidebar.service.ts
src/app/core/services/theme-service/: theme.service.ts
src/themes/: dark-soho.scss  dark-viva.scss  light-soho.scss  light-viva.scss
(+18 files in other folders)
