[package]
name = "fed-inspirasom"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
pickledb = "0.5.1"
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arduino-comm = { path = "arduino-comm", features = ["verbose"] }
midi-reader = { path = "midi-reader" }
sea-orm = { version = "1.1.0-rc.1", features = ["sqlx-sqlite", "macros", "runtime-async-std", "debug-print", "with-json", "with-time"] }
waitgroup = { workspace = true }
ts-rs = { workspace = true }
paris = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[workspace]
members = ["arduino-comm", "midi-reader", "utils"]

[workspace.dependencies]
ts-rs = "9.0.1"
waitgroup = "0.1.2"
paris = "1.5.15"
anyhow = "1.0.86"
thiserror = "1.0.63"
