[package]
name = "fed-inspirasom"
version = "0.0.0"
description = "Inspira Som desktop app"
authors = ["André Luiz Kovalski", "Leonardo Matthew Knight"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
waitgroup = { workspace = true }
ts-rs = { workspace = true }
paris = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
const_format = "0.2.33"
convert_case = "0.6.0"
lazy_static = "1.5.0"
tokio = "1.40.0"
strum = "0.26.3"
chrono = "0.4.38"

migration = { path = "persistence/migration", features = ["verbose"] }
entity = { path = "persistence/entity" }
persistence = { path = "persistence", features = ["verbose"] }
midi-reader = { path = "midi-reader" }
arduino-comm = { path = "arduino-comm", features = ["verbose"] }
log = "0.4.21"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[workspace]
members = ["arduino-comm", "midi-reader", "persistence", "utils", "persistence/migration", "persistence/entity"]

[workspace.dependencies]
ts-rs = "10.0.0"
waitgroup = "0.1.2"
paris = "1.5.15"
anyhow = "1.0.86"
thiserror = "1.0.63"
sea-orm = "1.1.0-rc.1"

[dependencies.sea-orm]
workspace = true
features = ["sqlx-sqlite", "macros", "runtime-tokio", "with-json", "with-time"]
