[package]
name = "arduino-comm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.3.0"
midir = "0.10.0"
serde = { version = "1", features = ["derive"] }
ts-rs = "8.1.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26.4"